Regression: Solidify Crease Inner not working with edge crease attribute #116019

Closed
opened 2023-12-11 04:02:29 +01:00 by Brendan · 1 comment

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.42

Blender Version
Broken: version: 4.0.1, branch: blender-v4.0-release, commit date: 2023-11-16 16:40, hash: d0dd92834a08
Worked: 3.6

Short description of error
The Crease Inner / Outer settings under Solidify -> Edge Data don't change the appearance of the mesh. Loading the file in Blender 3.6 shows the mesh crease as expected. The 4.0.3 RC has the same issue. See attached blend file.

This is due to the new edge crease attribute, clearing attribute prevents the issue

Exact steps for others to reproduce the error

  • Open attached blend file.
  • Change Crease Inner / Outer values in Solidify modifier. Notice no change to mesh appearance.
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.42 **Blender Version** Broken: version: 4.0.1, branch: blender-v4.0-release, commit date: 2023-11-16 16:40, hash: `d0dd92834a08` Worked: 3.6 **Short description of error** The Crease Inner / Outer settings under Solidify -> Edge Data don't change the appearance of the mesh. Loading the file in Blender 3.6 shows the mesh crease as expected. The 4.0.3 RC has the same issue. See attached blend file. This is due to the new edge crease attribute, clearing attribute prevents the issue **Exact steps for others to reproduce the error** - Open attached blend file. - Change Crease Inner / Outer values in Solidify modifier. Notice no change to mesh appearance.
Brendan added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2023-12-11 04:02:30 +01:00
Member

Hi, thanks for the report. I suspect this is affected by new edge crease attribute: e5ec04d73c
cc @HooglyBoogly

Hi, thanks for the report. I suspect this is affected by new `edge crease attribute`: e5ec04d73c78 cc @HooglyBoogly
Pratik Borhade added
Module
Modeling
Priority
High
Status
Confirmed
and removed
Priority
Normal
Status
Needs Triage
labels 2023-12-11 05:31:34 +01:00
Pratik Borhade changed title from Solidify Crease Inner / Outer not working on specific mesh - works correctly in 3.6 to Regression: Solidify Crease Inner not working with edge crease attribute 2023-12-11 05:54:36 +01:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-12-29 21:17:01 +01:00
Hans Goudey added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-29 21:17:29 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#116019
No description provided.