Fix #116019: Solidify Crease Inner not working with edge crease attribute

Prevents creation of redundant edge layer "crease_edge.001"

Pull Request: https://projects.blender.org/blender/blender/pulls/116491