source/blender/modifiers/intern/MOD_solidify_extrude.cc
@@ -1024,8 +1024,12 @@ Mesh *MOD_solidify_extrude_modifyMesh(ModifierData *md, const ModifierEvalContex
 
     float *result_edge_crease = nullptr;
     if (crease_rim || crease_outer || crease_inner) {
-      result_edge_crease = (float *)CustomData_add_layer_named(
-          &result->edge_data, CD_PROP_FLOAT, CD_SET_DEFAULT, result->edges_num, "crease_edge");
+      result_edge_crease = static_cast<float *>(CustomData_get_layer_named_for_write(
+          &result->edge_data, CD_PROP_FLOAT, "crease_edge", result->edges_num));
+      if (!result_edge_crease) {
+        result_edge_crease = static_cast<float *>(CustomData_add_layer_named(
+            &result->edge_data, CD_PROP_FLOAT, CD_SET_DEFAULT, result->edges_num, "crease_edge"));
+      }
     }
 
     /* add faces & edges */
